리팩토링 1차
application단, service단 역할과 책임 분리
Entiyt, DTO 의존성 분리
정적 팩토리 메소드 제거후 생성자로 변경